data/derived/comb/progs/unify/prog4431.ml.out
Characters 204-205:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type
         float * int list list -> int -> int * int list list
       but an expression was expected of type
         float * int list list -> int -> float * int list list
       Type int is not compatible with type float 
